# mcq-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  database.md  docker-compose.yml  index.html  main.py  pyproject.toml  request.json  requirements.txt  run.py  todolist.md  wsgi.py
.github/worflows/: ci.yml
.github/workflows/: ci.yml  ci_cd.yml
app/: __init__.py  api.py  db.py  frontend.py  models.py
app/core/: extraction.py  llm.py
app/routes/: auth.py  documents.py  quizzes.py  results.py  ui.py
app/static/js/: main.js
app/templates/: base.html  documents.html  home.html  login.html  quiz.html  quiz_play.html  register.html  results.html  upload.html
core/: extraction.py  llm.py
mcq_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  conftest.py  test_auth.py  test_documents.py  test_extraction.py  test_llm.py  test_models.py  test_quizzes.py  test_results.py  test_ui.py
