[project]
name = "mcq-generator"
version = "0.1.0"
description = "Multiple Choice Questions generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "markitdown[all]>=0.1.4",
    "openai",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
