[project]
name = "mcq-generator"
version = "0.1.0"
description = "Multiple Choice Questions generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage-badge>=1.1.2",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "gunicorn>=23.0.0",
    "markitdown[all]>=0.1.4",
    "mypy>=1.19.1",
    "openai",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "unicorn>=2.1.4",
    "werkzeug>=3.1.4",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
# Only include the `app` package
include = ["app"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
